manifests/homelab/kodekamp/Namespace-kodekamp.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: kodekamp
