manifests/homelab/kodekamp/Deployment-kodekamp-code-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kodekamp-code-runner
  namespace: kodekamp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kodekamp-code-runner
  template:
    metadata:
      labels:
        app: kodekamp-code-runner
    spec:
      automountServiceAccountToken: false
      containers:
        - image: registry.tail84b6c.ts.net/kodekamp-code-runner:2c3a0ca86ad1
          name: code-runner
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
