manifests/homelab/kodekamp/Deployment-kodekamp-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kodekamp-db
  namespace: kodekamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kodekamp-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kodekamp-db
    spec:
      automountServiceAccountToken: false
      containers:
        - image: mongo:4.4.29@sha256:52c42cbab240b3c5b1748582cc13ef46d521ddacae002bbbda645cebed270ec0
          name: mongodb
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - mountPath: /data/db
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: kodekamp-db-data
