manifests/homelab/kodekamp/Service-kodekamp-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: kodekamp-db
  namespace: kodekamp
spec:
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  selector:
    app: kodekamp-db
