manifests/homelab/kodekamp/Service-kodekamp-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/hostname: kodekamp
    tailscale.com/proxy-group: ingress
  name: kodekamp-tailscale
  namespace: kodekamp
spec:
  loadBalancerClass: tailscale
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: kodekamp-web
  type: LoadBalancer
