manifests/homelab/kodekamp/Service-kodekamp-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: kodekamp-web
  namespace: kodekamp
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: kodekamp-web
