manifests/homelab/kodekamp/NetworkPolicy-build.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/hook: PreSync
    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
    argocd.argoproj.io/sync-wave: "-1"
  name: build
  namespace: kodekamp
spec:
  egress:
    - {}
  podSelector:
    matchLabels:
      app: build-kodekamp
  policyTypes:
    - Egress
