manifests/homelab/kodekamp/NetworkPolicy-code-runner.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: code-runner
  namespace: kodekamp
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kodekamp-web
      ports:
        - port: 3000
          protocol: TCP
  podSelector:
    matchLabels:
      app: kodekamp-code-runner
  policyTypes:
    - Ingress
    - Egress
