manifests/homelab/kodekamp/NetworkPolicy-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db
  namespace: kodekamp
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kodekamp-web
      ports:
        - port: 27017
          protocol: TCP
  podSelector:
    matchLabels:
      app: kodekamp-db
  policyTypes:
    - Ingress
    - Egress
