manifests/homelab/kodekamp/NetworkPolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: kodekamp
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
