manifests/homelab/kodekamp/NetworkPolicy-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web
  namespace: kodekamp
spec:
  egress:
    - ports:
        - port: 27017
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app: kodekamp-db
    - ports:
        - port: 3000
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app: kodekamp-code-runner
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudflare-tunnel
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: glance
      ports:
        - port: 3000
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: victoria-metrics
          podSelector:
            matchLabels:
              app: dashboard-blackbox
      ports:
        - port: 3000
          protocol: TCP
  podSelector:
    matchLabels:
      app: kodekamp-web
  policyTypes:
    - Ingress
    - Egress
